case correction for filter label name DTS-35428
added capitalize text transform for label name

--- a/UI/src/app/dashboardv2/filter-v2/parent-filter/parent-filter.component.css
+++ b/UI/src/app/dashboardv2/filter-v2/parent-filter/parent-filter.component.css
@@ -1,7 +1,11 @@
 :host ::ng-deep .p-inputtext {
-    font-size: 0.75rem;
+  font-size: 0.75rem;
 }
 
 :host ::ng-deep .p-dropdown {
-    border: 1px solid #D5DBE1;
+  border: 1px solid #d5dbe1;
+}
+
+.floating-label {
+  text-transform: capitalize;
 }
