--- a/UI/src/app/dashboardv2/filter-v2/filter-new.component.html
+++ b/UI/src/app/dashboardv2/filter-v2/filter-new.component.html
@@ -93,7 +93,7 @@
         </ng-template>
         <ng-template pTemplate="footer">
           <div class="p-p-3 p-text-right">
-            <p-button label="Apply" (onClick)="showHideKPIs($event)" [style]="{backgroundColor: '#0B4BC8'}"
+            <p-button label="Apply" (onClick)="showHideKPIs()" [style]="{backgroundColor: '#0B4BC8'}"
               [disabled]="enableShowHideApply"></p-button>
           </div>
         </ng-template>
