--- a/UI/src/app/component/cumulative-line-chart/cumulative-line-chart.component.html
+++ b/UI/src/app/component/cumulative-line-chart/cumulative-line-chart.component.html
@@ -5,6 +5,6 @@
             <div class="tooltip-container"></div>
         </div>
     </div>
-    <div class="x-caption"></div>
+    <div class="x-caption"><span></span></div>
     <div id="legendContainer" ></div>
 </div>
