--- a/UI/src/app/dashboardv2/filter-v2/filter-new.component.html
+++ b/UI/src/app/dashboardv2/filter-v2/filter-new.component.html
@@ -54,6 +54,13 @@
       <span class="text-container p-d-inline-block p-mr-2">Duration:</span>
       <span class="p-text-bold p-d-inline-block data-container p-mr-3">{{combinedDate}}</span>
     </div>
+    <div class="p-d-inline-block p-mr-2" *ngIf="iterationConfigData?.capacity !== undefined && selectedTab?.toLowerCase() !== 'release'">
+      <span class="icon-container p-d-inline-block p-mr-2"><i class="pi pi-chart-line"></i></span>
+      <span class="text-container p-d-inline-block p-mr-2">Capacity:</span>
+      <span class="p-text-bold p-d-inline-block data-container p-mr-3">
+        {{iterationConfigData.capacity?.value?.value ? iterationConfigData.capacity?.value?.value + ' Hours' : 'NA'}}
+      </span>
+    </div>
 
     <div class="p-mr-2"
       *ngIf="this.selectedSprint?.['sprintState']?.toLowerCase() === 'active' && selectedTab?.toLowerCase() === 'iteration'">
