--- a/UI/src/app/dashboardv2/header-v2/header.component.html
+++ b/UI/src/app/dashboardv2/header-v2/header.component.html
@@ -21,7 +21,7 @@
       </div>
       <p-menu #notification [popup]="true" [model]="notificationList" class="custom-menu"></p-menu>
 
-      <div class="back-btn-wraper">
+      <div class="back-btn-wraper" *ngIf="!userDetails['authorities']?.includes('ROLE_VIEWER')">
         <div *ngIf="router.url.split('/').includes('Config') || router.url.split('/').includes('Help')"
           class="back-btn-container rounded p-mr-3">
           <button pButton pRipple class="back-btn" [disabled]="backToDashboardLoader" routerLinkActive="active"
