added placeholder on jira config page

--- a/UI/src/app/config/project-config/connection-list/connection-list.component.html
+++ b/UI/src/app/config/project-config/connection-list/connection-list.component.html
@@ -118,7 +118,7 @@
                     <ng-container *ngFor="let connectionLabelFields of connectionFieldLabels.labels; let i = index">
 
                         <div class="p-field"
-                             *ngIf="connectionFieldLabels.inputFields[i] === 'bearerToken' || connectionFieldLabels.inputFields[i] === 'vault' || connectionFieldLabels.inputFields[i] === 'cloudEnv' || connectionFieldLabels.inputFields[i] === 'isOAuth' || connectionFieldLabels.inputFields[i] === 'offline' || connectionFieldLabels.inputFields[i] === 'accessTokenEnabled' || connectionFieldLabels.inputFields[i] === 'isCloneable'">
+                             *ngIf="connectionFieldLabels.inputFields[i] === 'bearerToken' || connectionFieldLabels.inputFields[i] === 'vault' || connectionFieldLabels.inputFields[i] === 'cloudEnv' || connectionFieldLabels.inputFields[i] === 'isOAuth' || connectionFieldLabels.inputFields[i] === 'accessTokenEnabled' || connectionFieldLabels.inputFields[i] === 'isCloneable'">
 
                             <label for="connection_{{connectionFieldLabels.inputFields[i]}}">{{ connectionFieldLabels.inputFields[i] !== 'accessTokenEnabled' ? connectionLabelFields : connectionLabelFields[0]
                                 }}</label>
@@ -154,7 +154,7 @@
                         </div>
 
                         <div class="p-field"
-                             *ngIf="connectionFieldLabels.inputFields[i] !== 'type' && connectionFieldLabels.inputFields[i] !== 'repoToolProvider' && connectionFieldLabels.inputFields[i] !== 'passwordIsOAuth' && connectionFieldLabels.inputFields[i] !== 'connPrivate' && connectionFieldLabels.inputFields[i] !== 'cloudEnv' && connectionFieldLabels.inputFields[i] !== 'isOAuth' && connectionFieldLabels.inputFields[i] !== 'offline' && connectionFieldLabels.inputFields[i] !== 'vault' && connectionFieldLabels.inputFields[i] !== 'bearerToken' && connectionFieldLabels.inputFields[i] !== 'accessTokenEnabled' && connectionFieldLabels.inputFields[i] !== 'isCloneable'">
+                             *ngIf="connectionFieldLabels.inputFields[i] !== 'type' && connectionFieldLabels.inputFields[i] !== 'repoToolProvider' && connectionFieldLabels.inputFields[i] !== 'passwordIsOAuth' && connectionFieldLabels.inputFields[i] !== 'connPrivate' && connectionFieldLabels.inputFields[i] !== 'cloudEnv' && connectionFieldLabels.inputFields[i] !== 'isOAuth' && connectionFieldLabels.inputFields[i] !== 'vault' && connectionFieldLabels.inputFields[i] !== 'bearerToken' && connectionFieldLabels.inputFields[i] !== 'accessTokenEnabled' && connectionFieldLabels.inputFields[i] !== 'isCloneable'">
                             <label for="connection_{{connectionFieldLabels.inputFields[i]}}">{{ connectionLabelFields
                                 }}</label>
                             <input #inputFieldVar name="{{ connectionFieldLabels.inputFields[i] }}"
@@ -207,7 +207,7 @@
             </div>
             <div class="p-field">
                 <label for="baseUrl">Base Url</label>
-                <input class="ml-2" type="text" id="baseUrl" pInputText formControlName="baseUrl" (change)="updateForm()">
+                <input class="ml-2" type="text" id="baseUrl" pInputText formControlName="baseUrl" placeholder="" (change)="updateForm()">
             </div>
             <div class="p-field">
                 <label for="apiEndPoint">API Endpoint</label>
@@ -259,11 +259,6 @@
             <div class="p-field" *ngIf="jiraForm.controls['jaasKrbAuth']?.value">
                 <label for="samlEndPoint">Saml EndPoint</label>
                 <input class="ml-2" type="text" id="samlEndPoint" pInputText formControlName="samlEndPoint" (change)="updateForm()"/>
-            </div>
-            <div class="p-field">
-                <label for="offline">isOffline</label>
-                <p-inputSwitch id="offline" formControlName="offline" class="p-ml-2 p-mr-2">
-                </p-inputSwitch>
             </div>
             <div class="p-field">
                 <label for="connPrivate">Is Connection Private</label>
