added placeholder for username for jira connection

--- a/UI/src/app/config/project-config/connection-list/connection-list.component.html
+++ b/UI/src/app/config/project-config/connection-list/connection-list.component.html
@@ -221,7 +221,7 @@
             </div>
             <div class="p-field">
                 <label for="username">Username</label>
-                <input class="ml-2" type="text" id="username" pInputText formControlName="username" (change)="updateForm()">
+                <input class="ml-2" type="text" id="username" pInputText formControlName="username" (change)="updateForm()" placeholder="Preferably, use a service account credentials">
             </div>
             <div class="p-field"
                 *ngIf="!jiraForm.controls['vault']?.value && !jiraForm.controls['bearerToken']?.value && !jiraForm.controls['jaasKrbAuth']?.value">
