added feature flag for new_ui_switch

--- a/UI/src/app/app.component.html
+++ b/UI/src/app/app.component.html
@@ -15,7 +15,7 @@
   limitations under the License.
 
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<ng-container *featureFlag="'UI_SWITCH'">
+<ng-container *featureFlag="'NEW_UI_SWITCH'">
   <div class="ui-switch-container"
     *ngIf="router.url.indexOf('authentication') === -1 && router.url.indexOf('config') === -1">
     <span class="p-mr-6"> New experience (ON) | Legacy view (OFF)</span>
