--- a/UI/src/app/dashboardv2/filter-v2/filter-new.component.html
+++ b/UI/src/app/dashboardv2/filter-v2/filter-new.component.html
@@ -47,7 +47,7 @@
     <div class="p-d-inline-block p-mr-2">
       <span class="icon-container p-d-inline-block p-mr-2"><i class="pi pi-clock"></i></span>
       <span class="text-container p-d-inline-block p-mr-2">Days Left:</span>
-      <span class="p-text-bold p-d-inline-block data-container p-mr-3">{{iterationConfigData?.daysLeft}</span>
+      <span class="p-text-bold p-d-inline-block data-container p-mr-3">{{iterationConfigData?.daysLeft}}</span>
     </div>
     <div class="p-d-inline-block p-mr-2">
       <span class="icon-container p-d-inline-block p-mr-2"><i class="pi pi-calendar-times"></i></span>
