added and removed css for unwanted scroll

--- a/UI/src/app/app.component.css
+++ b/UI/src/app/app.component.css
@@ -79,5 +79,9 @@
   padding: 5px;
   font-size: 0.75rem;
   max-width: 100vw;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  justify-content: center;
 }
 
