--- a/UI/src/styles.css
+++ b/UI/src/styles.css
@@ -157,9 +157,7 @@ a{
 
 body {
   background-color: #dedede;
-  /* overflow-x: hidden; */
-
-  overflow: auto;
+  overflow-x: hidden;
 }
 
 /* html {
