--- a/UI/src/app/config/advanced-settings/advanced-settings.component.html
+++ b/UI/src/app/config/advanced-settings/advanced-settings.component.html
@@ -148,25 +148,26 @@
 
 <p-overlayPanel #op [showCloseIcon]="false">
   <div class="progress-dialog-body p-mb-4">
-    <h3>Progress Stats:</h3>
-    <p-table [value]="findTraceLogForTool('Jira')?.progressStatusList" [tableStyle]="{ 'min-width': '40rem' }"
-      [scrollable]="true" scrollHeight="200px"
-      *ngIf="findTraceLogForTool('Jira')?.progressStatusList?.length && !(findTraceLogForTool('Jira')?.errorMessage) ; else logError">
-      <ng-template pTemplate="header">
-        <tr>
-          <th>Step Name</th>
-          <th>End Time</th>
-          <th>Status</th>
-        </tr>
-      </ng-template>
-      <ng-template pTemplate="body" let-item>
-        <tr>
-          <td>{{item.stepName}}</td>
-          <td>{{endTimeConversion(item?.endTime)}}</td>
-          <td>{{item.status}}</td>
-        </tr>
-      </ng-template>
-    </p-table>
+    <section *ngIf="findTraceLogForTool('Jira')?.progressStatusList?.length && !(findTraceLogForTool('Jira')?.errorMessage)">
+      <h3>Progress Stats:</h3>
+      <p-table [value]="findTraceLogForTool('Jira')?.progressStatusList" [tableStyle]="{ 'min-width': '40rem' }"
+        [scrollable]="true" scrollHeight="200px">
+        <ng-template pTemplate="header">
+          <tr>
+            <th>Step Name</th>
+            <th>End Time</th>
+            <th>Status</th>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-item>
+          <tr>
+            <td>{{item.stepName}}</td>
+            <td>{{endTimeConversion(item?.endTime)}}</td>
+            <td>{{item.status}}</td>
+          </tr>
+        </ng-template>
+      </p-table>
+    </section>
 
     <section *ngIf="(findTraceLogForTool('Jira')?.errorDetailList !== undefined || findTraceLogForTool('Jira')?.errorDetailList?.length > 0)">
       <h3>Errors:</h3>
@@ -191,10 +192,6 @@
       </p-table>
     </section>
 
-    <ng-template #logError>
-      <h3 class="p-text-center" class="error-text"><img src="../../../assets/img/icon-failure.svg" alt="Failure"
-          class="p-mr-1" />{{ findTraceLogForTool('Jira')?.errorMessage}}</h3>
-    </ng-template>
     <ul class="p-pr-1 p-pl-0 list-style-none" *ngIf="dataMismatchObj['Jira']">
       <li class="tooltip-item p-d-flex p-pt-2">
         <div class="icon-container">
