DTS-37700 project creation helpertext

--- a/UI/src/app/config/project-config/basic-config/basic-config.component.html
+++ b/UI/src/app/config/project-config/basic-config/basic-config.component.html
@@ -55,7 +55,9 @@
             </div>
             <div *ngSwitchCase="'text'">
               <div class="p-mb-3 p-mt-3">
-                <span class="p-float-label">
+                <span class="p-float-label"
+                  pTooltip='{{ field.hierarchyLevelTooltip }}'
+                                tooltipPosition="bottom" tooltipEvent="hover">
                   <input required id="{{ field.hierarchyLevelId }}" [formControlName]="field.hierarchyLevelId"
                     [style]="{'width':'500px'}" type="text" pInputText>
                   <label for="{{ field.hierarchyLevelId }}">Enter {{ field.hierarchyLevelName
@@ -86,7 +88,9 @@
                 <p-autoComplete id="{{ field.hierarchyLevelId }}" [formControlName]="field.hierarchyLevelId"
                   [style]="{'width':'500px'}" [suggestions]="field.filteredSuggestions"
                   (completeMethod)="search($event, field)" required="required" [dropdown]="true" field="name"
-                  [forceSelection]="true">
+                  [forceSelection]="true"
+                                pTooltip='{{ field.hierarchyLevelInfo}}'
+                                tooltipPosition="bottom" tooltipEvent="hover" >
                   <ng-template let-country pTemplate="item">
                     <div class="country-item">
                       <div>{{country.name}}</div>
@@ -101,7 +105,7 @@
         </div>
         <div class="save-container p-text-right p-col-12 p-md-9">
           <button pButton pRipple type="submit" class="p-button-lg p-button-success p-button-raised" icon="pi pi-save"
-            iconPos="left" label="Save" [disabled]="!form.valid"></button>
+            iconPos="left" label="Create" [disabled]="!form.valid"></button>
         </div>
       </form>
 
