--- a/UI/src/app/config/project-config/tool-menu/tool-menu.component.html
+++ b/UI/src/app/config/project-config/tool-menu/tool-menu.component.html
@@ -51,7 +51,7 @@
                             [disabled]="isAssigneeSwitchDisabled" (onChange)="onAssigneeSwitchChange($event)">
                         </p-inputSwitch>
                         <label for="assigneeSwitch" class="p-mr-5" style="font-family: 'FuturaNext_Medium', sans-serif;">
-                            &nbsp;&nbsp;Individual KPIs
+                            &nbsp;&nbsp;Enable People performance KPIs
                             <span class="fa fa-info-circle kpi-info-icon" aria-hidden="true"
                                 pTooltip='<div class="inner-content">
                                     {{assigneeSwitchInfo}}
