changed board slug from mydashboard to my-knowhow and kpi-maturity label and slug to maturity

--- a/UI/src/app/dashboard/filter/filter.component.html
+++ b/UI/src/app/dashboard/filter/filter.component.html
@@ -401,9 +401,9 @@
             </div> -->
             <!-- Download button end -->
             <!-- Download excel Button error message start -->
-            <span class="float-right errMsz alert alert-danger" style="padding: 6px 17px;"
+            <!-- <span class="float-right errMsz alert alert-danger" style="padding: 6px 17px;"
                *ngIf="( enginneringMaturityErrorMessage !== '' ) && ( selectedTab === 'EngineeringMaturity' )">{{
-               enginneringMaturityErrorMessage }}</span>
+               enginneringMaturityErrorMessage }}</span> -->
             <!-- Download excel Button error message end -->
          </div>
       </div>
